[gd_scene load_steps=6 format=3 uid="uid://dkiqs1vdel2xw"]

[ext_resource type="Texture2D" uid="uid://j4qlfwskesix" path="res://assets/img/background.png" id="1_aipfl"]
[ext_resource type="Script" path="res://Scenes/Select.gd" id="1_dnqt5"]
[ext_resource type="Texture2D" uid="uid://ctaukpmjbmgx4" path="res://assets/img/player1_right.png" id="2_vdwa2"]
[ext_resource type="Texture2D" uid="uid://cho0t2313c45q" path="res://assets/img/player2_right.png" id="3_puu2b"]
[ext_resource type="Texture2D" uid="uid://bamqdwfiq2d85" path="res://assets/img/player3_right.png" id="4_fok5r"]

[node name="Select" type="Node2D"]
script = ExtResource("1_dnqt5")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.341176, 0.341176, 0.341176, 1)
position = Vector2(983, 533)
scale = Vector2(1, 1.12524)
texture = ExtResource("1_aipfl")

[node name="Player1" type="Button" parent="."]
offset_left = 180.0
offset_top = 240.0
offset_right = 580.0
offset_bottom = 840.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player1"]
position = Vector2(198, 167)
texture = ExtResource("2_vdwa2")

[node name="Panel" type="Label" parent="Player1"]
clip_contents = true
layout_mode = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 350.0
offset_bottom = 550.0
theme_override_font_sizes/font_size = 20
text = "레드

기본형







장점
모든 수치가 균형잡힘





단점
X

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="Button" parent="."]
offset_left = 740.0
offset_top = 240.0
offset_right = 1140.0
offset_bottom = 840.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player2"]
position = Vector2(198, 167)
texture = ExtResource("3_puu2b")

[node name="Panel" type="Label" parent="Player2"]
clip_contents = true
layout_mode = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 350.0
offset_bottom = 550.0
theme_override_font_sizes/font_size = 20
text = "블루

속도형







장점
빠른 이동/연사속도 





단점
매우 낮은 체력, 약간 낮은 공격력

"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player3" type="Button" parent="."]
offset_left = 1320.0
offset_top = 240.0
offset_right = 1720.0
offset_bottom = 840.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player3"]
position = Vector2(198, 167)
texture = ExtResource("4_fok5r")

[node name="Panel" type="Label" parent="Player3"]
clip_contents = true
layout_mode = 0
offset_left = 50.0
offset_top = 300.0
offset_right = 350.0
offset_bottom = 550.0
theme_override_font_sizes/font_size = 20
text = "그린

탱커형







장점
높은 체력, 공격이 적을 관통함





단점
느린 이동/연사속도, 낮은 공격력

"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_up" from="Player1" to="." method="_on_player_1_button_up"]
[connection signal="button_up" from="Player2" to="." method="_on_player_2_button_up"]
[connection signal="button_up" from="Player3" to="." method="_on_player_3_button_up"]
